--- a/index.html
+++ b/index.html
@@ -38,24 +38,22 @@
 
 <!-- 	meta -->
 	<title>GREEENHA.U$</title>
-	<meta name="msvalidate.01" content="BE5E85044D732A5C38594A33E7FF17DB" />
-	<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=2.0; user-scalable=1;"/>
-	<meta property="og:title" content="Andrew Monks"/>
-	<meta property="og:site_name" content="Andrew Monks"/>
-	<meta property="og:type" content="public_figure"/>
+	<meta property="og:title" content="GREEENHA.U$"/>
+	<meta property="og:site_name" content="GREEENHA.U$"/>
+	<meta property="og:type" content="place"/>
 	<meta property="og:email" content="a@monks.co"/>
 	<meta property="og:phone_number" content="978-254-1779"/>
 	<meta property="og:locality" content="Chicago"/>
 	<meta property="og:region" content="IL"/>
-	<meta property="og:postal-code" content="60601"/>
+	<meta property="og:postal-code" content="60657"/>
 	<meta property="og:country-name" content="USA"/>
-	<meta property="og:url" content="http://monks.co/"/>
+	<meta property="og:url" content="http://greeenha.us/"/>
 	<meta property="og:image" content="http://monks.co/images/triangle.png"/>
 	<meta property="og:image:type" content="image/png"/>
 	<meta property="og:image:width" content="392"/>
 	<meta property="og:image:height" content="339"/>
-	<meta property="og:description" content="Andrew Monks is an artist and technologist based in Chicago, IL."/>
-	<meta name="description" content="Andrew Monks is an artist and technologist based in Chicago, IL."/>
+	<meta property="og:description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago."/>
+	<meta name="description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago."/>
 	
 	
 <!-- 	jquery -->
