--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 	<meta property="og:image:type" content="image/png"/>
 	<meta property="og:image:width" content="392"/>
 	<meta property="og:image:height" content="339"/>
+	<meta property="place:location:latitude" content="41.942361"/>
+	<meta property="place:location:longitude" content="-87.649473"/>
 	<meta property="og:description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago."/>
 	<meta name="description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago."/>
 	
@@ -138,8 +140,8 @@
 	<div class="container">
 		<div class="four columns offset-by-six">
 			<div class="box">
-				<p>Please direct any and all proposals, curiosities, and inquiries to <a href="mailto:a@monks.co">Andrew Monks</a>.</p>
-				<p>Holy the supernatural extra brilliant intelligent kindness of the soul!</p>
+				<p>Please direct all proposals, inquiries, and curiosities to <a href="mailto:a@monks.co">Andrew Monks</a>.</p>
+				<p id="poem">Holy the supernatural extra brilliant intelligent kindness of the soul!</p>
 			</div>
 		</div>
 	</div>
