--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
 	</script>
 
 </head>
-
 <body>
 
 	<div class="container">
@@ -121,17 +120,11 @@
 
 	<div class="container">
 		<div class="sixteen columns">
-			<div class="panorama box">
-				<h2>living room</h2>
-				<iframe frameborder="0" src="http://photosynth.net/embed.aspx?cid=1f4f5a1b-01df-40f9-a65c-f95b507e3959&delayLoad=true&slideShowPlaying=false" width="100%" height="400"></iframe>
-			</div>
-			<div class="panorama box">
-				<h2>kitchen</h2>
-				<iframe frameborder="0" src="http://photosynth.net/embed.aspx?cid=d57198dc-4c9c-4cea-806d-ba83ce797044&delayLoad=true&slideShowPlaying=false" width="100%" height="400"></iframe>
-			</div>
-			<div class="panorama box">
-				<h2>roof</h2>
-				<iframe frameborder="0" src="http://photosynth.net/embed.aspx?cid=ea7c0a36-8c86-4ec0-bcc1-8a728533c500&delayLoad=true&slideShowPlaying=false" width="100%" height="400"></iframe>
+			<div class="box">
+				<h2>Addicted To The Shin-Dig</h2>
+				<p>Addicted to the Shin-Dig: A Payaso Summer Sideshow was a group exhibition curated by Jason Abrams. It featured work by Nicholas Amsel, Sam Balfus, Molly Paris Conn, Nicholas Garcia, A.K.Gerlofs, Andie Grusin, Rae Kim Job, Andrew Monks, Kass Patselas, Connor Peacock, Ashlin Williamson, and Alexander Richard Wilson.
+				<p>	In an attempt to promote artistic growth and exploration through collaboration this exhibition includes only works that bear the mark of at least two artists. As the result of these collaborations pieces were created in various forms and media; including paintings, photographs and video projections.</p>
+				<p>Documentation of the show is available on <a href="https://www.facebook.com/events/312285002240341/">Facebook</a>.</p>
 			</div>
 		</div>
 	</div>
