--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<!--[if (gte IE 9)|!(IE)]><!-->
+<html lang="en">
+<!--<![endif]-->
+
 <head>
-	<meta charset="UTF-8" />
-	
-<!--      _____                   _______                   _____                    _____                    _____          
+    <meta charset="UTF-8" />
+
+    <!--      _____                   _______                   _____                    _____                    _____          
          /\    \                 /::\    \                 /\    \                  /\    \                  /\    \         
         /::\____\               /::::\    \               /::\____\                /::\____\                /::\    \        
        /::::|   |              /::::::\    \             /::::|   |               /:::/    /               /::::\    \       
@@ -36,106 +39,157 @@
 
 
 
-<!-- 	meta -->
-	<title>GREEENHA.U$</title>
-	<meta property="og:title" content="GREEENHA.U$"/>
-	<meta property="og:site_name" content="GREEENHA.U$"/>
-	<meta property="og:type" content="place"/>
-	<meta property="og:email" content="a@monks.co"/>
-	<meta property="og:phone_number" content="978-254-1779"/>
-	<meta property="og:locality" content="Chicago"/>
-	<meta property="og:region" content="IL"/>
-	<meta property="og:postal-code" content="60657"/>
-	<meta property="og:country-name" content="USA"/>
-	<meta property="og:url" content="http://greeenha.us/"/>
-	<meta property="og:image" content="http://monks.co/images/triangle.png"/>
-	<meta property="og:image:type" content="image/png"/>
-	<meta property="og:image:width" content="392"/>
-	<meta property="og:image:height" content="339"/>
-	<meta property="place:location:latitude" content="41.942361"/>
-	<meta property="place:location:longitude" content="-87.649473"/>
-	<meta property="og:description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago."/>
-	<meta name="description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago."/>
-	
-	
-<!-- 	jquery -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	
-<!-- 	css switch -->
-	<script type="text/javascript">
-		$(document).ready(function() {
-			// red
-			$("#css-resume").click(function() {
-			$('<link>').attr({ 'rel': 'stylesheet', 'href': 'stylesheets/print.css' }).appendTo('head')
-			});
-		});
-	</script>
-	
-	
-<!-- 	typekit -->
-	<script type="text/javascript" src="//use.typekit.net/spu7lgy.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-	
-<!-- 	css -->
-	<link rel="stylesheet" href="stylesheets/base.css">
-	<link rel="stylesheet" href="stylesheets/skeleton.css">
-	<link rel="stylesheet" href="stylesheets/layout.css">
-	<link rel="stylesheet" href="stylesheets/style.css">
+    <!-- 	meta -->
+    <title>GREEENHA.U$</title>
+    <meta property="og:title" content="GREEENHA.U$" />
+    <meta property="og:site_name" content="GREEENHA.U$" />
+    <meta property="og:type" content="place" />
+    <meta property="og:email" content="a@monks.co" />
+    <meta property="og:phone_number" content="978-254-1779" />
+    <meta property="og:locality" content="Chicago" />
+    <meta property="og:region" content="IL" />
+    <meta property="og:postal-code" content="60657" />
+    <meta property="og:country-name" content="USA" />
+    <meta property="og:url" content="http://greeenha.us/" />
+    <meta property="og:image" content="http://monks.co/images/triangle.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="392" />
+    <meta property="og:image:height" content="339" />
+    <meta property="place:location:latitude" content="41.942361" />
+    <meta property="place:location:longitude" content="-87.649473" />
+    <meta property="og:description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago." />
+    <meta name="description" content="GREEENHA.U$ is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago." />
 
-		<!--[if lt IE 9]>
+
+    <!-- 	jquery -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+
+    <!-- 	css switch -->
+    <script type="text/javascript">
+    $(document).ready(function() {
+        // red
+        $("#css-resume").click(function() {
+            $('<link>').attr({
+                'rel': 'stylesheet',
+                'href': 'stylesheets/print.css'
+            }).appendTo('head')
+        });
+    });
+    </script>
+
+
+    <!-- 	typekit -->
+    <script type="text/javascript" src="//use.typekit.net/spu7lgy.js"></script>
+    <script type="text/javascript">
+    try {
+        Typekit.load();
+    } catch (e) {}
+    </script>
+
+    <!-- 	css -->
+    <link rel="stylesheet" href="stylesheets/base.css">
+    <link rel="stylesheet" href="stylesheets/skeleton.css">
+    <link rel="stylesheet" href="stylesheets/layout.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+    <!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-	
-	
-<!-- 	analytics -->
-	<script type="text/javascript">
-		var _gaq = _gaq || [];
-		var pluginUrl = 
-		 '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
-		_gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-		_gaq.push(['_setAccount', 'UA-37834146-1']);
-		_gaq.push(['_trackPageview']);
-		(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-	</script>
+
+
+    <!-- 	analytics -->
+    <script type="text/javascript">
+    var _gaq = _gaq || [];
+    var pluginUrl =
+        '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+    _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
+    _gaq.push(['_setAccount', 'UA-37834146-1']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+        var ga = document.createElement('script');
+        ga.type = 'text/javascript';
+        ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(ga, s);
+    })();
+    </script>
 
 </head>
+
 <body>
 
-	<div class="container">
-		<div class="eight columns offset-by-four">
-			<div class="box">
-				<div id="header">
-					<h1>greeen&#x200B;ha.u$</h1>
-				</div>
-				<div id="subheader">
-					<p>is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago. It&#8127;s occupied by <a href="http://monks.co">Andrew Monks</a>, <a href="http://transcoding.tumblr.com/">Molly Conn,</a> <a href="https://www.facebook.com/teddy.vb.7">Teddy Verbockel</a>, and currently <a href="https://saic.digication.com/jason_abrams/Fl_neur/published">Jason Abrams</a>. It also holds the offices of <a href="http://belgianman.com">Belgian Man Records</a>.</p>
-				</div>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="eight columns offset-by-four">
+            <div class="box">
+                <div id="header">
+                    <h1>greeen&#x200B;ha.u$</h1>
+                </div>
+                <div id="subheader">
+                    <p>is an artspace, a studio, a gallery, and an apartment located in the vibrant community of Boystown, Chicago. It&#8127;s occupied by <a href="http://monks.co">Andrew Monks</a>, <a href="http://transcoding.tumblr.com/">Molly Conn,</a>  <a href="https://www.facebook.com/teddy.vb.7">Teddy Verbockel</a>, and currently <a href="https://saic.digication.com/jason_abrams/Fl_neur/published">Jason Abrams</a>. It also holds the offices of <a href="http://belgianman.com">Belgian Man Records</a>.</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-	<div class="container">
-		<div class="sixteen columns">
-			<div class="box">
-				<h2>Addicted To The Shin-Dig</h2>
-				<p>Addicted to the Shin-Dig: A Payaso Summer Sideshow was a group exhibition curated by Jason Abrams. It featured work by Nicholas Amsel, Sam Balfus, Molly Paris Conn, Nicholas Garcia, A.K.Gerlofs, Andie Grusin, Rae Kim Job, Andrew Monks, Kass Patselas, Connor Peacock, Ashlin Williamson, and Alexander Richard Wilson.
-				<p>	In an attempt to promote artistic growth and exploration through collaboration this exhibition includes only works that bear the mark of at least two artists. As the result of these collaborations pieces were created in various forms and media; including paintings, photographs and video projections.</p>
-				<p>Documentation of the show is available on <a href="https://www.facebook.com/events/312285002240341/">Facebook</a>.</p>
-			</div>
-		</div>
-	</div>
-	
-	<div class="container">
-		<div class="four columns offset-by-six">
-			<div class="box">
-				<p>Please direct all proposals, inquiries, and curiosities to <a href="mailto:a@monks.co">Andrew Monks</a>.</p>
-				<p id="poem">Holy the supernatural extra brilliant intelligent kindness of the soul!</p>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="sixteen columns">
+            <div class="box">
+                <h2>Addicted To The Shin-Dig</h2>
+                <div id="myCarousel" class="carousel slide">
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                        <li data-target="#myCarousel" data-slide-to="3"></li>
+                    </ol>
+                    <!-- Carousel items -->
+                    <div class="carousel-inner">
+                        <div class="active item">
+                            <img src="/images/shindig/panorama.jpg" />
+                        </div>
+                        <div class="item">
+                            <img src="/images/shindig/jason.jpg" />
+                            <div class="poem">Jason Abrams + Rae Kim</div>
+                        </div>
+                        <div class="item">
+                            <img src="/images/shindig/andie.jpg" />
+                            <div class="poem">Andie Grusin</div>
+                        </div>
+                        <div class="item">
+                            <img src="/images/shindig/love.jpg" />
+                            <div class="poem">Love, by Andrew Monks, Molly Conn, and Jason Abrams</div>
+                        </div>
+                    </div>
+                    <!-- Carousel nav -->
+                    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+                    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
+                </div>
+                <p>Addicted to the Shin-Dig: A Payaso Summer Sideshow was a group exhibition curated by Jason Abrams. It featured work by Nicholas Amsel, Sam Balfus, Molly Paris Conn, Nicholas Garcia, A.K.Gerlofs, Andie Grusin, Rae Kim Job, Andrew Monks, Kass Patselas, Connor Peacock, Ashlin Williamson, and Alexander Richard Wilson.</p>
+                <p>In an attempt to promote artistic growth and exploration through collaboration this exhibition includes only works that bear the mark of at least two artists. As the result of these collaborations pieces were created in various forms and media; including paintings, photographs and video projections.</p>
+                <p>Documentation of the show is available on <a href="https://www.facebook.com/events/312285002240341/">Facebook</a>.</p>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="container">
+        <div class="four columns offset-by-six">
+            <div class="box">
+                <p>Please direct all proposals, inquiries, and curiosities to <a href="mailto:a@monks.co">Andrew Monks</a>.</p>
+                <p class="poem">Holy the supernatural extra brilliant intelligent kindness of the soul!</p>
+            </div>
+        </div>
+    </div>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+    $(document).ready(function() {
+        $('.carousel').carousel();
+    });
+    </script>
+
 </body>
+
 </html>
