--- a/ad.html
+++ b/ad.html
@@ -99,20 +99,20 @@
 
     <!-- 	analytics -->
     <script type="text/javascript">
-    var _gaq = _gaq || [];
-    var pluginUrl =
-        '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
-    _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
-    _gaq.push(['_setAccount', 'UA-37834146-1']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-        var ga = document.createElement('script');
-        ga.type = 'text/javascript';
-        ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(ga, s);
-    })();
+        var _gaq = _gaq || [];
+        var pluginUrl =
+            '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+        _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
+        _gaq.push(['_setAccount', 'UA-37834146-1']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+            var ga = document.createElement('script');
+            ga.type = 'text/javascript';
+            ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(ga, s);
+        })();
     </script>
 
 </head>
@@ -135,41 +135,41 @@
     <div class="container">
         <div class="sixteen columns">
             <div class="box">
-                <h2>Addicted To The Shin-Dig</h2>
-                <div id="myCarousel" class="carousel slide">
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <li data-target="#myCarousel" data-slide-to="3"></li>
-                    </ol>
-                    <!-- Carousel items -->
-                    <div class="carousel-inner">
-                        <div class="active item">
-                            <img src="/images/shindig/panorama.jpg" />
-                        </div>
-                        <div class="item">
-                            <img src="/images/shindig/jason.jpg" />
-                            <div class="poem">Jason Abrams + Rae Kim</div>
-                        </div>
-                        <div class="item">
-                            <img src="/images/shindig/andie.jpg" />
-                            <div class="poem">Andie Grusin</div>
-                        </div>
-                        <div class="item">
-                            <img src="/images/shindig/love.jpg" />
-                            <div class="poem">Love, by Andrew Monks, Molly Conn, and Jason Abrams</div>
-                        </div>
-                    </div>
-                    <!-- Carousel nav -->
-                    <a class="carousel-control left" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-                    <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
-                </div>
-                <p>Addicted to the Shin-Dig: A Payaso Summer Sideshow was a group exhibition curated by Jason Abrams. It featured work by Nicholas Amsel, Sam Balfus, Molly Paris Conn, Nicholas Garcia, A.K.Gerlofs, Andie Grusin, Rae Kim Job, Andrew Monks, Kass Patselas, Connor Peacock, Ashlin Williamson, and Alexander Richard Wilson.</p>
-                <p>In an attempt to promote artistic growth and exploration through collaboration this exhibition includes only works that bear the mark of at least two artists. As the result of these collaborations pieces were created in various forms and media; including paintings, photographs and video projections.</p>
-                <p>Documentation of the show is available on <a href="https://www.facebook.com/events/312285002240341/">Facebook</a>.</p>
+                <h2>Seeking Resident</h2>
+                <p>The Greeenha.u$ is currently seeking one new resident.</p>
+                <ul>
+                    <li>Rent is $850 per month, plus a flat rate of 150$ per month for utilities and maintenance.</li>
+                    <li>Our current lease ends after June, 2014, with extension possible.</li>
+                    <li>Your roommates are <a href="http://facebook.com/profile.php?id=1043529038">Molly Conn</a> and <a href="https://www.facebook.com/andrewmonks">Andrew Monks</a>.</li>
+                    <li><a href="https://www.facebook.com/rami.vms">Rami Shetty</a>, <a href="https://www.facebook.com/clay.kerr.77">Clay Kerr</a>, and <a href="https://www.facebook.com/nicholas.nakai">Nick Garcia</a> live upstairs.</li>
+                    <li>The ideal candidate is an SAIC student able to move in as soon as possible.</li>
+                    <li>Though the 2500 square foot size makes it easier, remember that the Greeenha.u$ is run as a semi-public space with frequent events and visitors. Each resident has their own (lockable) bedroom, but you&#8127;ll rarely have the house to yourself.</li>
+                </ul>
             </div>
         </div>
+    </div>
+
+    <div class="container">
+        <div class="sixteen columns">
+            <iframe src="https://docs.google.com/forms/d/1GZMOi281tPvMDvmF6Crfw0CUc5M5lDfTHFbbPoe2uqA/viewform?embedded=true" width="760" height="600" marginheight="0" marginwidth="0">Loading...</iframe>
+        </div>
+    </div>
+
+    <div class="container">
+            <div class="sixteen columns">
+                    <div class="panorama box">
+                            <h2>living room</h2>
+                            <iframe frameborder="0" src="http://photosynth.net/embed.aspx?cid=1f4f5a1b-01df-40f9-a65c-f95b507e3959&delayLoad=true&slideShowPlaying=false" width="100%" height="400"></iframe>
+                    </div>
+                    <div class="panorama box">
+                            <h2>kitchen</h2>
+                            <iframe frameborder="0" src="http://photosynth.net/embed.aspx?cid=d57198dc-4c9c-4cea-806d-ba83ce797044&delayLoad=true&slideShowPlaying=false" width="100%" height="400"></iframe>
+                    </div>
+                    <div class="panorama box">
+                            <h2>roof</h2>
+                            <iframe frameborder="0" src="http://photosynth.net/embed.aspx?cid=ea7c0a36-8c86-4ec0-bcc1-8a728533c500&delayLoad=true&slideShowPlaying=false" width="100%" height="400"></iframe>
+                    </div>
+            </div>
     </div>
 
 
@@ -177,18 +177,13 @@
     <div class="container">
         <div class="four columns offset-by-six">
             <div class="box">
-                <p>Please direct all proposals, inquiries, and curiosities to <a href="mailto:a@monks.co">Andrew Monks</a>.</p>
                 <p class="poem">Holy the supernatural extra brilliant intelligent kindness of the soul!</p>
             </div>
         </div>
     </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
-    <script>
-    $(document).ready(function() {
-        $('.carousel').carousel();
-    });
-    </script>
 
 </body>
 
