--- a/ad.html
+++ b/ad.html
@@ -138,9 +138,10 @@
                 <h2>Seeking Resident</h2>
                 <p>The Greeenha.u$ is currently seeking one new resident.</p>
                 <ul>
-                    <li>Rent is $850 per month, plus a flat rate of 150$ per month for utilities and maintenance.</li>
+                    <li>Rent is $1000 per month, plus a flat rate of 150$ per month for utilities and maintenance.</li>
+                    <li>The room is the master bedroom, and includes its own separate bathroom (with jacuzzi) and a walk-in closet.</li>
                     <li>Our current lease ends after June, 2014, with extension possible.</li>
-                    <li>Your roommates are <a href="http://facebook.com/profile.php?id=1043529038">Molly Conn</a> and <a href="https://www.facebook.com/andrewmonks">Andrew Monks</a>.</li>
+                    <li>Your roommates are <a href="https://www.facebook.com/raeshmayrae">Rae Kim Job</a> and <a href="https://www.facebook.com/andrewmonks">Andrew Monks</a>.</li>
                     <li><a href="https://www.facebook.com/rami.vms">Rami Shetty</a>, <a href="https://www.facebook.com/clay.kerr.77">Clay Kerr</a>, and <a href="https://www.facebook.com/nicholas.nakai">Nick Garcia</a> live upstairs.</li>
                     <li>The ideal candidate is an SAIC student able to move in as soon as possible.</li>
                     <li>Though the 2500 square foot size makes it easier, remember that the Greeenha.u$ is run as a semi-public space with frequent events and visitors. Each resident has their own (lockable) bedroom, but you&#8127;ll rarely have the house to yourself.</li>
